syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtPhoneUpdateAppInfoProtos"; //生成的类名

message UpdateAppInfo {
    string ip = 1;
    string phoneAppVersion = 2;    //手机app版本号
    string serverAppVersion = 3;   //服务端app版本号
    string tiantong_update_md = 4;  //升级文件的md5

}

